cambios de objeto json
se cambian los datos a solicitar se ajusta todo el codigo para refleje esos cambios
